feat: add base route
